--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -132,7 +132,7 @@
             editable-field-container-clicked-elsewhere="closeRepeatingPicker()" data-snap-ignore="true">
             <div list-picker="repeatTypes" list-picker-save="closeRepeatingPickerAndSetRepeatTypeToTask(task, list)"
               list-picker-clear="closeRepeatingPickerAndClearRepeatTypeFromtask(task, list)"
-              list-picker-get-selected="task.repeating ? {title: task.repeating} : undefined"
+              list-picker-get-selected="task.trans.repeating ? {title: task.trans.repeating} : undefined"
               list-picker-type="repeating"></div>
           </div>
 
@@ -145,13 +145,13 @@
             </div>
 
             <div ng-hide="urlFocused || !task.trans.due" class="row-vertically-centered">
-              <a href ng-class="task.repeating ? 'link' : 'downplayed'" ng-click="openRepeatingPicker()">
-                <span class="text-link" ng-bind="task.repeating ? task.repeating : 'select repeating\u2026'"></span>
+              <a href ng-class="task.trans.repeating ? 'link' : 'downplayed'" ng-click="openRepeatingPicker()">
+                <span class="text-link" ng-bind="task.trans.repeating ? task.trans.repeating : 'select repeating\u2026'"></span>
               </a>
             </div>
 
             <div class="row-vertically-centered with-textarea">
-              <textarea ng-model="task.link" ng-focus="setUrlFocus(true)" ng-blur="setUrlFocus(false)"
+              <textarea ng-model="task.trans.link" ng-focus="setUrlFocus(true)" ng-blur="setUrlFocus(false)"
                 msd-elastic maxlength="128" placeholder="enter url&#8230;"
                 autocapitalize="none" autocorrect="off">
               </textarea>
