List saving fixes:  * Bind into list title into trans.title instead of persistent title, and bind the rest of properties in list editor into transient properties as well.  * Fixed adding new list into active lists.  * Removed list validation from ListController.saveList.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -3,7 +3,7 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endListEdit()" >
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="titlebarHasText() && !list.deleted ? 'save' : 'back'"></span>
+          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="listTitlebarHasText() && !list.deleted ? 'save' : 'back'"></span>
         </a>
         <a href ng-if="!list.deleted" class="group-symmetrical--right" ng-click="deleteListInEdit()" >
           <span class="icon-trash"></span>
@@ -12,7 +12,7 @@
       </div>
 
       <div class="row-vertically-centered with-textarea">
-        <textarea ng-model="titlebar.text" ng-keydown="listTitlebarTextKeyDown($event)" editable-field
+        <textarea ng-model="list.trans.title" ng-keydown="listTitlebarTextKeyDown($event)" editable-field
           editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
           msd-elastic dynamic-placeholder="enter list title&#8230;" maxlength="128"
           autocapitalize="none" autocorrect="off">
@@ -27,7 +27,7 @@
         <div ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}" class="container-content"
         drawer-override-aisle="right" swiper-prevent>
           <div class="row-vertically-centered with-textarea" editable-field-container>
-            <textarea ng-model="list.description" msd-elastic editable-field
+            <textarea ng-model="list.trans.description" msd-elastic editable-field
               ng-focus="setDescriptionFocus(true)" ng-blur="setDescriptionFocus(false)"
               placeholder="enter description&#8230;" maxlength="1024" autocapitalize="none" autocorrect="off">
            </textarea>
@@ -50,7 +50,7 @@
         swiper-prevent>
 
           <div class="row-vertically-centered with-textarea">
-            <textarea ng-model="list.link" msd-elastic maxlength="128" placeholder="enter url&#8230;"
+            <textarea ng-model="list.trans.link" msd-elastic maxlength="128" placeholder="enter url&#8230;"
               autocapitalize="none" autocorrect="off">
             </textarea>
           </div>
