--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -7,7 +7,7 @@
         editable-field-container-clicked-elsewhere="clickedElsewhere()"
         autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
-          <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)"
+          <textarea ng-model="newItem.trans.title" msd-elastic ng-keydown="textareaKeyDown($event)"
             editable-field editable-field-register-callbacks="registerAddItemCallbacks(focus, blur)"
             placeholder="add context&#8230;" maxlength="128">
           </textarea>
