--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -3,16 +3,17 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
         <a href class="group-symmetrical--left link-navigation highlighted" ng-click="endItemEdit()">
-          <span class="text-navigation-back" ng-bind="titlebarHasText() && !item.deleted ? 'save' : 'back'"></span>
+          <span class="text-navigation-back" ng-bind="itemTitlebarHasText() && !item.deleted ? 'save' : 'back'"></span>
         </a>
         <a ng-if="!item.deleted" href class="group-symmetrical--right" ng-click="deleteItemInEdit()" >
           <span class="icon-trash"></span>
         </a>
-        <a ng-if="item.deleted" class="group-symmetrical--right link-navigation highlighted active" href ng-click="undeleteItem(item)"><span class="text-navigation">restore</span></a>
+        <a ng-if="item.deleted" href class="group-symmetrical--right link-navigation highlighted active"
+          ng-click="undeleteItem(item)"><span class="text-navigation">restore</span></a>
       </div>
 
       <div class="row-vertically-centered with-textarea">
-        <textarea ng-model="titlebar.text" ng-keydown="itemTitlebarTextKeyDown($event)" editable-field
+        <textarea ng-model="item.trans.title" ng-keydown="itemTitlebarTextKeyDown($event)" editable-field
           editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
           msd-elastic dynamic-placeholder="enter item title&#8230;" maxlength="128"
           autocapitalize="none" autocorrect="off">
@@ -24,7 +25,7 @@
   <div ng-style="{'padding-bottom': EDITOR_FOOTER_HEIGHT}" class="container-fluid--inner">
     <div class="container-content" drawer-override-aisle="right">
       <div class="row-vertically-centered with-textarea">
-        <textarea ng-model="item.description" msd-elastic placeholder="enter description&#8230;"
+        <textarea ng-model="item.trans.description" msd-elastic placeholder="enter description&#8230;"
           maxlength="1024" autocapitalize="none" autocorrect="off">
         </textarea>
       </div>
