Fixed adding new item into inbox, and from omnibar as well. Removed scope variable titlebar from EditorController. Removed item validation from ItemsController.saveItem.

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -8,8 +8,8 @@
         editable-field-container-clicked-elsewhere="clickedElsewhere()"
         autocapitalize="none" autocorrect="off">
         <div class="group-mixed--middle">
-          <textarea ng-model="newItem.title" msd-elastic ng-keydown="textareaKeyDown($event)" editable-field
-            editable-field-register-callbacks="registerAddItemCallbacks(focus, blur)"
+          <textarea ng-model="newItem.trans.title" msd-elastic ng-keydown="textareaKeyDown($event)"
+            editable-field editable-field-register-callbacks="registerAddItemCallbacks(focus, blur)"
             placeholder="add item&#8230;" maxlength="128">
           </textarea>
         </div>
