--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -93,6 +93,7 @@
   <script src="static/app/base/listItemAddDirective.js"></script>
   <script src="static/app/base/listItemDirective.js"></script>
   <script src="static/app/base/listPromptDirective.js"></script>
+  <script src="static/app/base/modalDirective.js"></script>
   <script src="static/app/base/toasterDirective.js"></script>
   <script src="static/app/base/swiperContainerDirective.js"></script>
   <script src="static/app/base/swiperPreventDirective.js"></script>
