--- a/frontend/core/src/main/webapp/static/app/root/root.html
+++ b/frontend/core/src/main/webapp/static/app/root/root.html
@@ -1,8 +1,8 @@
 <div class="container-root" editable-field-backdrop>
-  <div class="container-root--inner" ng-view ng-class="smallDeviceHeight && 'height-small'">
-  </div>
+  <div class="container-root--inner" ng-view ng-class="smallDeviceHeight && 'height-small'"></div>
 
-  <div ng-if="modal.visible" class="container-modal animate-modal" modal editable-field-container="auto"
-    editable-field-container-blur
-    editable-field-container-clicked-elsewhere="hideModal()"></div>
+  <div ng-if="modal.visible" class="container-modal animate-modal" modal="modal.params" modal-close="hideModal()"
+    editable-field-container="auto" editable-field-container-blur
+    editable-field-container-clicked-elsewhere="hideModal()">
+  </div>
 </div>
