Added default modal close text. Added additional variable to check if close button is hidden so it is visible by default.

--- a/frontend/core/src/main/webapp/static/app/base/modal.html
+++ b/frontend/core/src/main/webapp/static/app/base/modal.html
@@ -1,6 +1,6 @@
 <section class="container-content">
   <header class="group-symmetrical">
-    <a href ng-if="closeText" class="group-symmetrical--right link-navigation" ng-click="closeModal()">
+    <a href ng-hide="hideCloseText" class="group-symmetrical--right link-navigation" ng-click="closeModal()">
       <span class="text-navigation" ng-bind="closeText"></span>
     </a>
   </header>
