--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContext.html
@@ -19,7 +19,7 @@
       ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
       ng-repeat="task in listInfos.array = (getFullArray() | paramFilter:isListItemVisible)
-      | orderBy:'created':true | limitTo: currentListLimitTo" list-item
+      | orderBy:'created':true | limitTo: currentListLimitTo" list-item="getContextId()"
       ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
     <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-hide="[listItemAddActive]"></div>
   </section>
